--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Homework 7.2</title>
 </head>
 <body>
-    <script type="text/javascript" src="./js/get-sum.js"></script>
+    <script type="text/javascript" src="js/get-product.js"></script>
 </body>
 </html>
